--- a/src/App.css
+++ b/src/App.css
@@ -1,133 +1,99 @@
 body{
-  background-color: rgb(16, 16, 56);
-}
-.containerone{
-  box-shadow: 10px 10px 10px 10px;
-  border : 4px solid black;
- box-sizing:border-box;
-  position : absolute;
-  left:30%;
-  width:40%;
-  background-color:rgb(25, 27, 53);
-  top:5%;
-  height:90%;
-  overflow:hidden;
-  border-radius: 6px;
-}
-header{
-  overflow:hidden;
-  box-sizing:border-box;
-  position : absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   width: 100%;
-  top: 0%;
-  left: 0%;
-  height: 20%;
+  height: 100vh;
+  overflow: hidden;
+}
+.containero{
+  box-shadow: 4px 4px 24px 0px rgba(0,0,0,0.53);
+  height: 80vh;
+  width: 300px;
+  overflow: hidden;
+  border-radius: 10px;
+  background-color: #ffffff;
+}
+form{
+  background-color: #ff8575;
+  width: 100%;
+  height: 15%;
+  border-bottom : 1.5px solid rgba(255, 1, 1, 0.349);
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly
 }
 .inputfield{
-  border-radius: 7px;
-  height: 35%;
-  width:65%;
-  position : absolute;
-  left: 9%;
-  top:30%;
-  text-align:center;
-  color:black;
-  font-family: monospace;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  color: white;
+  font-weight: 600;
+  background-color: rgba(255, 74, 74, 0);
   outline: none;
-  font-size: 18px;
-  background-color: rgb(160, 130, 173);
-}
-
-.onebut{
-  outline: none;
-  background-color: rgb(174, 247, 6);
+  text-align: center;
+  border: 2px solid white;
   border-radius: 5px;
-  position: absolute ;
-  right: 6%;
-  top:35%;
-  border-style: none;
-  text-shadow:2px 2px 5px #000000;
-  height:30%;
-  width:auto;
-  padding: 9px 20px;
+  height: 25px;
 }
-footer{
-  position:relative;
-  top:20%;
-  left: -5%;
-  height:auto;
-  width:100%;
-  overflow: auto;
- box-sizing:border-box;
+.onebut{
+  background-color: transparent;
+  border: none;
+  outline: none;
+}
+.ftr{
+  overflow-y: auto;
+  overflow-x: hidden;
+  width: 100%;
+  height: 85%;
+}
+.ftr ul{
+  width: 100%;
+  margin-top: 0;
+  list-style: none;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
 }
 .listn{
-  list-style: none;
-}
-.complete{
-  background-color: rgb(39, 238, 82);
-  position: relative;
-  left: 22%;
+  margin-left: -16px;
+  width: 90%;
 }
 .section{
-  background-color: rgb(148, 19, 109); 
-  border-radius: 3px;
-  width: 100%;
-  display: inline-flex;
-  margin-bottom:4%;
-  overflow :auto;
+  display: flex;
 }
 .ninput{
-  color: aliceblue; 
-  position: relative;
-  left: 22%;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: rgb(0, 0, 0);
+  text-align: center;
+  width: 75%;
+  padding-top: 0.2rem;
+  padding-bottom: 0.2rem;
+  border-radius: 2px;
+  border: 1.5px solid#ff8575;
+  overflow-x: auto;
+  overflow-y: hidden;
+  scrollbar-width: none;
 }
-.butt2{
-  background-color: rgb(15, 3, 3);
-  color: rgb(214, 18, 155);
-  position: absolute;
-  margin-top: 13px;
+.listn button{
+  color: black;
+  padding-left: 1rem;
+  margin: 0;
+  outline: none;
   border: none;
-  left : 19%;
-  border-radius: 5px;
-  padding: 3px 10px 4px 10px;
+  background-color: transparent;
 }
-.butt1{
-  background-color: rgb(6, 5, 17);
-  position: absolute;
-  left: 11%;
-  color: rgb(223, 27, 158);
-  margin-top: 13px;
-  border: none;
-  border-radius: 7px;
-  padding: 4px 8px 3px 8px;
-}
-@media only screen and (max-width:980px)
-{ 
-.containerone{
-  border : 4px solid black;
- box-sizing:border-box;
-  position : absolute;
-  left:25%;
-  width:50%;
-  background-color:rgb(18, 20, 51);
-  top:5%;
-  height:90%;
-  overflow:hidden;
-  border-radius: 6px;
-}
-}
-@media only screen and (max-width:700px)
-{ 
-.containerone{
-  border : 4px solid black;
- box-sizing:border-box;
-  position : absolute;
-  left:10%;
-  width:80%;
-  background-color:rgb(18, 20, 51);
-  top:5%;
-  height:90%;
-  overflow:hidden;
-  border-radius: 6px;
-}
+.complete{
+  padding-top: 0.2rem;
+  padding-bottom: 0.2rem;
+  overflow-x: auto;
+  overflow-y: hidden;
+  scrollbar-width: none;
+  color: rgb(2, 2, 2);
+  text-align: center;
+  width: 75%;
+  border-radius: 2px;
+  border: 1.5px solid rgb(240, 128, 128);
+  background-color: rgba(255, 127, 80, 0.226);
 }
