--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,29 @@
 body{
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  position: relative;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   width: 100%;
-  height: 100vh;
-  overflow: hidden;
+  height: 900px;
+  overflow-x: hidden;
+  background-color: rgb(255, 255, 255);
+}
+.navb{
+  height: 40px;
+  color: white;
+  margin-top: 0;
+  padding-top: 10px;
+  padding-left: 40px;
+  background-color:rgb(248, 107, 107);
 }
 .containero{
+  position: absolute;
+  top: 10%;
+  left: 0;
+  right: 0;
+  margin: auto;
   box-shadow: 4px 4px 24px 0px rgba(0,0,0,0.53);
-  height: 80vh;
+  height: 500px;
   width: 300px;
   overflow: hidden;
   border-radius: 10px;
